updated ci workflow

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,9 +3,9 @@ name: CI
 
 on:
   push:
-    branches: [ master ]
+    branches: [ main ]
   pull_request:
-    branches: [ master ]
+    branches: [ main ]
 
 jobs:
 
@@ -17,14 +17,11 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: start environment
-      run: |
-        export USE_HOST_DOCKER=1
-        
-        ./run.sh -d
+      run: make start
 
     - name: wait for environment
       run: while [ $(curl -s localhost:5000/healthy)_ != "ok_"  ] ; do echo waiting... ; docker-compose logs --tail=20 ; echo "jenkins log:" ; docker logs jenkins --tail=20 ; sleep 2 ; done
 
     - name: run tests and coverage
-      run: docker exec sage-ecr_sage-ecr_1 /bin/ash -c 'coverage run -m pytest -v  &&  coverage report -m  --fail-under 70'
+      run: make test
 
