--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,15 @@
-Flask
-flask_cors
-mysqlclient
-pytest
-coverage
-middleware
-requests
-python-jenkins
-xmltodict
-prometheus_client
-pyyaml
-gunicorn
-Werkzeug
-bleach
-boto3
+Flask==2.2.*
+Werkzeug==2.2.*
+gunicorn==20.1.*
+flask_cors==3.0.*
+mysqlclient==2.1.*
+python-jenkins==1.7.*
+middleware==1.2.*
+requests==2.28.*
+xmltodict==0.13.*
+prometheus_client==0.16.*
+pyyaml==6.*
+bleach==6.0.*
+boto3==1.26.*
+pytest==7.2.*
+coverage==7.1.*
