--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,36 +1,49 @@
 version: '3.7'
-
-# to start this enviornment with a jenkins instance, use run.sh instead of this docker-compose file directly
-
-
-
 services:
 
   sage-ecr:
     image: waggle/sage-ecr:latest
-    build:
-      context: .
-      dockerfile: Dockerfile
+    build: .
     depends_on:
       - db
     ports:
-      - "5000:5000"
+      - "127.0.0.1:5000:5000"
     volumes:
-      - ${PWD}:/usr/src/app  # for development only
+      - ./:/usr/src/app  # for development only
     restart: always
-    env_file: mysql.env
     networks:
       - sage-ecr
     environment:
+      # test suite requires this to be set to prevent accidentally wiping production database and registry
+      TESTING: "true"
+
+      # database settings
+      MYSQL_HOST: db
+      MYSQL_DATABASE: SageECR
+      MYSQL_USER: sage
+      MYSQL_PASSWORD: test
+
+      # jenkins settings
+      JENKINS_SERVER: http://jenkins:8080
+      JENKINS_USER: ecrdb
+      JENKINS_TOKEN: test
+
+      # registry settings
+      DOCKER_REGISTRY_PASSWORD: ${DOCKER_REGISTRY_PASSWORD}
+      DOCKER_REGISTRY_URL: "registry:5000"
+      DOCKER_REGISTRY_PUSH_ALLOWED: "1"
+      DOCKER_REGISTRY_INSECURE: "1"
+
+      # buildkit settings
+      BUILDKITD_ADDR: "tcp://buildkitd:1234"
+
+      # auth settings (not used for local testing)
       AUTH_METHOD: ${AUTH_METHOD}
       tokenInfoEndpoint: ${SageTokenInfoEndpoint}
       tokenInfoUser: ${SageTokenInfoUser}
       tokenInfoPassword: ${SageTokenInfoPassword}
-      JENKINS_SERVER: ${JENKINS_SERVER}
-      JENKINS_USER: ecrdb
-      JENKINS_TOKEN: ${JENKINS_TOKEN}
-      DOCKER_REGISTRY_PASSWORD: ${DOCKER_REGISTRY_PASSWORD}
-      DOCKER_REGISTRY_URL: "registry.local:5002"
+
+      # s3 settings (not used in local testing)
       ADD_USER: ${ADD_USER}
       S3_ENDPOINT: ${S3_ENDPOINT}
       S3_ACCESS_KEY: ${S3_ACCESS_KEY}
@@ -39,29 +52,47 @@ services:
       S3_FOLDER: ${S3_FOLDER}
 
   db:
-    image: mysql:8.0.20
-    env_file: mysql.env
-    volumes:
-      - ${PWD}/schema.sql:/docker-entrypoint-initdb.d/init.sql
-      - sage-ecr-db:/var/lib/mysql
+    image: mysql
+    environment:
+      MYSQL_HOST: db
+      MYSQL_ROOT_PASSWORD: testtest
+      MYSQL_DATABASE: SageECR
+      MYSQL_PASSWORD: test
+      MYSQL_USER: sage
     networks:
       - sage-ecr
-    cap_add:
-      - SYS_NICE  # CAP_SYS_NICE
 
-  registry.local:
+  jenkins:
+    image: waggle/ecr-jenkins:1.0.0
     restart: always
-    image: registry:2.7
     ports:
-      - 5002:5000
+      - "127.0.0.1:8082:8080"
+    environment:
+      - CASC_JENKINS_CONFIG=/config/casc_jenkins.yaml
+      - JAVA_OPTS=-Dhudson.footerURL=http://localhost:8082 -Djenkins.install.runSetupWizard=false
+    volumes:
+      - ./jenkins/casc_jenkins.yaml:/config/casc_jenkins.yaml:ro
     networks:
       - sage-ecr
 
-volumes:
-  sage-ecr-db:
+  registry:
+    restart: always
+    image: registry:2
+    environment:
+      - REGISTRY_STORAGE_DELETE_ENABLED=true # allows us to delete manifests between unit tests
+    networks:
+      - sage-ecr
 
+  buildkitd:
+    image: moby/buildkit:latest
+    command:
+      - --addr
+      - tcp://0.0.0.0:1234
+    # double check the actual capabilities needed
+    privileged: true
+    networks:
+      - sage-ecr
 
 networks:
   sage-ecr:
    name: sage-ecr
-
