--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,7 +9,7 @@ services:
     ports:
       - "127.0.0.1:5000:5000"
     volumes:
-      - ./:/usr/src/app  # for development only
+      - ./:/app  # for development only
     restart: always
     networks:
       - sage-ecr
