--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -29,8 +29,8 @@ services:
       JENKINS_TOKEN: test
 
       # registry settings
-      DOCKER_REGISTRY_PASSWORD: ${DOCKER_REGISTRY_PASSWORD}
       DOCKER_REGISTRY_URL: "registry:5000"
+      DOCKER_REGISTRY_PASSWORD:
       DOCKER_REGISTRY_PUSH_ALLOWED: "1"
       DOCKER_REGISTRY_INSECURE: "1"
 
@@ -38,18 +38,18 @@ services:
       BUILDKITD_ADDR: "tcp://buildkitd:1234"
 
       # auth settings (not used for local testing)
-      AUTH_METHOD: ${AUTH_METHOD}
-      tokenInfoEndpoint: ${SageTokenInfoEndpoint}
-      tokenInfoUser: ${SageTokenInfoUser}
-      tokenInfoPassword: ${SageTokenInfoPassword}
+      AUTH_METHOD:
+      tokenInfoEndpoint:
+      tokenInfoUser:
+      tokenInfoPassword:
 
       # s3 settings (not used in local testing)
-      ADD_USER: ${ADD_USER}
-      S3_ENDPOINT: ${S3_ENDPOINT}
-      S3_ACCESS_KEY: ${S3_ACCESS_KEY}
-      S3_SECRET_KEY: ${S3_SECRET_KEY}
-      S3_BUCKET: ${S3_BUCKET}
-      S3_FOLDER: ${S3_FOLDER}
+      S3_ENDPOINT:
+      S3_ACCESS_KEY:
+      S3_SECRET_KEY:
+      S3_BUCKET:
+      S3_FOLDER:
+
 
   db:
     image: mysql
